@@ -1,3 +1,5 @@
+* Override warehouse with context value for current user
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Add visual on product and location quantities
